force-app/main/default/objects/Question__c/fields/Answer_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Answer_Sequence__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Answer Sequence</label>
    <referenceTo>Answer_Sequence__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>