force-app/main/default/objects/Question__c/fields/Correct_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Correct_Boolean__c</fullName>
    <label>Correct Boolean</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>