force-app/main/default/objects/Question__c/fields/Description_RTA__c.field-meta.xml
<CustomField>
    <fullName>Description_RTA__c</fullName>
    <label>Additional Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>