force-app/main/default/objects/Question__c/fields/Question_Line__c.field-meta.xml
<CustomField>
    <fullName>Question_Line__c</fullName>
    <label>Question Line</label>
    <referenceTo>Question_Line__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>